# InfoMatViewer

./: .gitignore  LICENSE  configs.py  database.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  response_models.py
app/: Dockerfile  auth.py  configs.py  database.py  enumerations.py  requirements.txt  response_models.py
app/routes/: __init__.py  admin.py  pages.py  search.py  user.py
app/templates/: index.html
db/: Dockerfile
templates/: index.html
