[tool.poetry]
name = "infomatviewer"
version = "0.1.0"
description = ""
authors = ["Lucas Santos Silva <luss1010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
peewee = "^3.16.3"
psycopg2 = "^2.9.7"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
google-auth = "^2.23.0"
requests = "^2.31.0"
email-validator = "^2.0.0.post2"


[tool.poetry.group.dev.dependencies]
locust = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
